start web development

--- a/pages/web-dev.html
+++ b/pages/web-dev.html
@@ -49,71 +49,29 @@
     </section>
 
     <div class="content">
-        <h3 class="content-header">DIENSTLEISTUNGEN</h3>
-        <p>
-            Sie wollen Ihre bestehende Webseite überarbeiten oder eine neue Webseite erstellen?
-            <br>
-            Dann sind Sie bei uns an der richtigen Adresse. Egal ob Web-Design, Web-Entwicklung oder Support, 
-            wir sind jederzeit für Sie da und geben unser Bestes, um Ihnen das perfekte Benutzererlebnis zu bieten.
+        <h3 class="content-header">WAS SIE ERWARTET</h3>
+        <p class="content-text">
+          In der heutigen digitalen Welt ist eine starke Online-Präsenz für Unternehmen und Organisationen aller Größenordnungen unerlässlich. Mit einer gut gestalteten und funktionalen Website oder App können Sie Ihre Zielgruppe erreichen, Ihre Marke stärken und Ihre Geschäftsziele erreichen.
         </p>
 
-        <div class="accordion accordion-flush" id="accordionFlushExample">
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingOne">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" style="font-weight: bolder;">
-                <i class="bi bi-palette-fill" style="margin-right: 1%;"></i>Web-Design
-              </button>
-            </h2>
-            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">
-                <p>
-                  Vom Konzept zum fertigen Design-Entwurf Ihrer Webseite
-                  <br><br>
-                  Ihr Traum von einer modernen und ansprechenden Webseite beginnt bei Le-Noir Web-Entwicklung!
-                  <br><br>
-                  Wir begleiten Sie von der ersten Idee bis zum fertigen Design-Entwurf Ihrer Webseite und sorgen dafür, dass Ihre Online-Präsenz perfekt zu Ihnen und Ihren Zielen passt.
-                </p>
-              </div>
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="./../images/bg7.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./../images/bg8.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./../images/bg9.jpg" alt="Third slide">
             </div>
           </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingTwo">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo" style="font-weight: bolder;">
-                <i class="bi bi-laptop-fill" style="margin-right: 1%;"></i>Web-Entwicklung  
-              </button>
-            </h2>
-            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">
-                <p>
-                  Wir lassen Ihren Traum real werden!
-                  <br><br>
-                  Mit Leidenschaft und Expertise zum perfekten Ergebnis
-                  <br><br>
-                  Bei Le-Noir Web-Entwicklung ist es unsere Mission, Ihre Visionen und Ideen in die Realität umzusetzen. Wir nehmen uns Zeit, um Ihre Bedürfnisse und Wünsche genau zu verstehen, und entwickeln gemeinsam mit Ihnen ein Konzept, das perfekt zu Ihnen passt. 
-                  Dabei legen wir großen Wert auf eine enge Zusammenarbeit und offene Kommunikation, um sicherzustellen, dass Sie während des gesamten Projekts stets involviert sind und Ihre Ideen einbringen können.
-                </p>    
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingThree">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree" style="font-weight: bolder;">
-                <i class="bi bi-question-circle-fill" style="margin-right: 1%;"></i>Support  
-              </button>
-            </h2>
-            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">
-                <p>
-                  Fragen nach Abschluss des Projekts?
-                  <br><br>
-                  Wir sind auch nach Fertigstellung Ihrer Webseite für Sie da!
-                  <br><br>
-                  Bei Le-Noir Web-Entwicklung wissen wir, dass Ihre Webseite auch nach der Fertigstellung des Projekts gepflegt und aktualisiert 
-                  werden muss. Daher bieten wir Ihnen umfassenden Support und Wartung, damit Ihre Webseite immer auf dem neuesten Stand bleibt.
-                </p>
-              </div>
-            </div>
-          </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          </a>
         </div>
     </div>
 
