--- a/pages/web-dev.html
+++ b/pages/web-dev.html
@@ -56,14 +56,23 @@
 
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="d-block w-100" src="./../images/bg7.jpg" alt="First slide">
+            <div class="carousel-item active w-80">
+              <div class="carousel-row">
+                <h4>MODERN &amp; ANSPRECHEND</h4>
+                <p>Todo</p>
+              </div>
             </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="./../images/bg8.jpg" alt="Second slide">
+            <div class="carousel-item w-80">
+              <div class="carousel-row">
+                <h4>SCHNELL &amp; QUALITATIV</h4>
+                <p>Todo</p>
+              </div>
             </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="./../images/bg9.jpg" alt="Third slide">
+            <div class="carousel-item w-80">
+              <div class="carousel-row">
+                <h4>ZUKUNFTSSICHER</h4>
+                <p>Todo</p>
+              </div>
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
