dev page & refactoring

--- a/pages/web-content.html
+++ b/pages/web-content.html
@@ -31,9 +31,6 @@
             <a class="nav-link" href="./../pages/web-dev.html">Web Entwicklung</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./../pages/support.html">Support</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="./../pages/about.html">Über uns</a>
           </li>
         </ul>
@@ -50,7 +47,7 @@
 
     <div class="content">
         <h3 class="content-header">DIENSTLEISTUNGEN</h3>
-        <p>
+        <p class="content-text">
             Sie wollen Ihre bestehende Webseite überarbeiten oder eine neue Webseite erstellen?
             <br>
             Dann sind Sie bei uns an der richtigen Adresse. Egal ob Web-Design, Web-Entwicklung oder Support, 
@@ -118,7 +115,7 @@
     </div>
 
     <section class="showcase">
-        <img src="./../images/bg8.jpg" alt="Picture">
+        <img src="./../images/bg9.jpg" alt="Picture">
         <div class="overlay-appointment">
             <h2 class="appointment-header">BERATUNGSTERMIN</h2>
             <p class="appointment-text">Vereinbaren sie noch Heute Ihren kostenlosen Beratungstermin!</p>
