--- a/pages/web-dev.html
+++ b/pages/web-dev.html
@@ -31,9 +31,6 @@
             <a class="nav-link" href="./../pages/web-dev.html">Web Entwicklung</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./../pages/support.html">Support</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="./../pages/about.html">Über uns</a>
           </li>
         </ul>
@@ -58,20 +55,21 @@
           <div class="carousel-inner">
             <div class="carousel-item active w-80">
               <div class="carousel-row">
-                <h4>MODERN &amp; ANSPRECHEND</h4>
-                <p>Todo</p>
+                <h4 style="font-weight: bold;">MODERN &amp; ANSPRECHEND</h4>
+                <p>Mit einem ansprechenden Webdesign ziehen Sie nicht nur mehr Besucher auf Ihre Seite, sondern steigern auch Ihre Conversion-Rate und senken gleichzeitig Ihre Betriebskosten.</p>
               </div>
             </div>
             <div class="carousel-item w-80">
               <div class="carousel-row">
-                <h4>SCHNELL &amp; QUALITATIV</h4>
-                <p>Todo</p>
+                <h4 style="font-weight: bold;">SCHNELL &amp; QUALITATIV</h4>
+                <p>In der heutigen Online-Welt ist eine qualitative Webseite mehr als nur eine Visitenkarte – sie ist Ihr Fundament im digitalen Zeitalter.</p>
               </div>
             </div>
             <div class="carousel-item w-80">
               <div class="carousel-row">
-                <h4>ZUKUNFTSSICHER</h4>
-                <p>Todo</p>
+                <h4 style="font-weight: bold;">ZUKUNFTSSICHER</h4>
+                <p>In der dynamischen Welt des Internets ist es entscheidend, dass Ihre Webseite nicht nur heute, sondern auch in Zukunft überzeugt.
+                  Mit einer zukunftssicheren Webseite sind Sie bestens gerüstet für die kommenden Herausforderungen und Trends.</p>
               </div>
             </div>
           </div>
@@ -85,10 +83,10 @@
     </div>
 
     <section class="showcase">
-        <img src="./../images/bg7.jpg" alt="Picture">
+        <img src="./../images/bg8.jpg" alt="Picture">
         <div class="overlay-appointment">
-            <h2 class="appointment-header">BERATUNGSTERMIN</h2>
-            <p class="appointment-text">Vereinbaren sie noch Heute Ihren kostenlosen Beratungstermin!</p>
+            <h2 class="appointment-header">DIREKT STARTEN!</h2>
+            <p class="appointment-text">Starten Sie direkt mit der Umsetzung Ihrer Webseite. <br>Wir unterstützen Sie mit bestem Know-How und Kundenverständnis!</p>
             <button type="button" class="btn btn-light"><a href="mailto:jan.eggenberger@bluewin.ch?subject=Beratungstermin" id="appointment-link">Termin vereinbaren</a></button>
         </div>
     </section>
