--- a/pages/about.html
+++ b/pages/about.html
@@ -46,80 +46,53 @@
     </section>
 
     <div class="content">
-        <h3 class="content-header">DIENSTLEISTUNGEN</h3>
-        <p>
-            Sie wollen Ihre bestehende Webseite überarbeiten oder eine neue Webseite erstellen?
-            <br>
-            Dann sind Sie bei uns an der richtigen Adresse. Egal ob Web-Design, Web-Entwicklung oder Support, 
-            wir sind jederzeit für Sie da und geben unser Bestes, um Ihnen das perfekte Benutzererlebnis zu bieten.
+        <h3 class="content-header">ÜBER UNS</h3>
+        <p class="content-text"> 
+          Eine perfekte Website für jeden.
+          <br>
+          Wir bei LE NOIR glauben, dass jeder eine Online-Präsenz verdient, die professionell, ansprechend und effektiv ist.
+          <br>
+          Unsere Mission ist es, Menschen mit den Werkzeugen und dem Know-how auszustatten, die sie benötigen, um die perfekte Website für ihre Bedürfnisse zu erstellen, unabhängig von ihren technischen Fähigkeiten oder ihrem Budget.
         </p>
+        <div class="row about-section">
+          <div class="col-md-4">
+            <img src="./../images/jan.jpg" class="about-img"/> 
+          </div>
+        <div class="col-md-8 about-text">
+          <h4>JAN EGGENBERGER</h4>
+          <h6>CEO | Founder | Web-Entwickler</h6>
 
-        <div class="accordion accordion-flush" id="accordionFlushExample">
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingOne">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" style="font-weight: bolder;">
-                <i class="bi bi-palette-fill" style="margin-right: 1%;"></i>Web-Design
-              </button>
-            </h2>
-            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">
-                <p>
-                  Vom Konzept zum fertigen Design-Entwurf Ihrer Webseite
-                  <br><br>
-                  Ihr Traum von einer modernen und ansprechenden Webseite beginnt bei Le-Noir Web-Entwicklung!
-                  <br><br>
-                  Wir begleiten Sie von der ersten Idee bis zum fertigen Design-Entwurf Ihrer Webseite und sorgen dafür, dass Ihre Online-Präsenz perfekt zu Ihnen und Ihren Zielen passt.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingTwo">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo" style="font-weight: bolder;">
-                <i class="bi bi-laptop-fill" style="margin-right: 1%;"></i>Web-Entwicklung  
-              </button>
-            </h2>
-            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">
-                <p>
-                  Wir lassen Ihren Traum real werden!
-                  <br><br>
-                  Mit Leidenschaft und Expertise zum perfekten Ergebnis
-                  <br><br>
-                  Bei Le-Noir Web-Entwicklung ist es unsere Mission, Ihre Visionen und Ideen in die Realität umzusetzen. Wir nehmen uns Zeit, um Ihre Bedürfnisse und Wünsche genau zu verstehen, und entwickeln gemeinsam mit Ihnen ein Konzept, das perfekt zu Ihnen passt. 
-                  Dabei legen wir großen Wert auf eine enge Zusammenarbeit und offene Kommunikation, um sicherzustellen, dass Sie während des gesamten Projekts stets involviert sind und Ihre Ideen einbringen können.
-                </p>    
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingThree">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree" style="font-weight: bolder;">
-                <i class="bi bi-question-circle-fill" style="margin-right: 1%;"></i>Support  
-              </button>
-            </h2>
-            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">
-                <p>
-                  Fragen nach Abschluss des Projekts?
-                  <br><br>
-                  Wir sind auch nach Fertigstellung Ihrer Webseite für Sie da!
-                  <br><br>
-                  Bei Le-Noir Web-Entwicklung wissen wir, dass Ihre Webseite auch nach der Fertigstellung des Projekts gepflegt und aktualisiert 
-                  werden muss. Daher bieten wir Ihnen umfassenden Support und Wartung, damit Ihre Webseite immer auf dem neuesten Stand bleibt.
-                </p>
-              </div>
-            </div>
-          </div>
+          <br><br>
+          <p class="about-quote">
+            Wenn du etwas so machst, wie du es seit zehn Jahren gemacht hast, 
+            <br>
+            dann sind die Chancen groß, dass du es falsch machst.
+            <br>
+            – Charles Kettering
+          </p>
+        </div>
         </div>
     </div>
 
     <section class="showcase">
         <img src="./../images/bg10.jpg" alt="Picture">
         <div class="overlay-appointment">
-            <h2 class="appointment-header">BERATUNGSTERMIN</h2>
-            <p class="appointment-text">Vereinbaren sie noch Heute Ihren kostenlosen Beratungstermin!</p>
-            <button type="button" class="btn btn-light"><a href="mailto:jan.eggenberger@bluewin.ch?subject=Beratungstermin" id="appointment-link">Termin vereinbaren</a></button>
+            <h2 class="appointment-header">KONTAKT</h2>
+            <form class="appointment-text row">
+              <div class="mb-2 col-md-6">
+                <label for="exampleInputText1" class="form-label">Name</label>
+                <input type="email" class="form-control" id="exampleInputText1" aria-describedby="emailHelp">
+              </div>
+              <div class="mb-2 col-md-6">
+                <label for="exampleInputEmail1" class="form-label">E-Mail</label>
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              </div>
+              <div class="mb-3 col-md-12">
+                <label for="exampleFormControlTextarea1" class="form-label">Ihre Nachricht</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+              <button type="button" class="btn btn-light col-md-2" style="margin: auto;"><a href="mailto:jan.eggenberger@bluewin.ch?subject=Beratungstermin" id="appointment-link">Absenden</a></button>
+            </form>            
         </div>
     </section>
 
