--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end le-noir-nav" id="navbarToggler">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" aria-current="page" href="./pages/web-design.html">Web Design</a>
           </li>
           <li class="nav-item">
@@ -29,6 +29,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./pages/web-dev.html">Web Entwicklung</a>
+          </li> -->
+          <li class="nav-item">
+            <a class="nav-link" href="./pages/contact.html">Kontakt</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./pages/about.html">Über uns</a>
@@ -74,7 +77,7 @@
                 Ein Screen- und UX-Designer vereint die verschiedenen Anforderungen und Erkenntnisse: Brand Design, Bildwelt, Content und Erfahrung für eine optimale Nutzerführung. 
                 Basierend auf den Nutzerprofilen und dem erwarteten Nutzerverhalten entstehen Seitenelemente, Navigation und Unterseiten. 
                 Ein klickbarer Prototyp ermöglicht erste Tests und eine Beurteilung der Anmutung.                </p>
-              <button type="button" class="btn btn-dark"><a href="./pages/web-design.html" class="more-link">Mehr erfahren</a></button>
+              <!-- <button type="button" class="btn btn-dark"><a href="./pages/web-design.html" class="more-link">Mehr erfahren</a></button> -->
             </div>
           </div>
         </div>
@@ -91,7 +94,7 @@
                 Die Qualität und das gelungene Zusammenspiel all dieser Elemente entscheiden maßgeblich über die spätere Sichtbarkeit der 
                 Website - also das Ranking in der Google-Suche.
               </p>
-              <button type="button" class="btn btn-dark"><a href="./pages/web-content.html" class="more-link">Mehr erfahren</a></button>
+              <!-- <button type="button" class="btn btn-dark"><a href="./pages/web-content.html" class="more-link">Mehr erfahren</a></button> -->
             </div>
           </div>
         </div>
@@ -108,7 +111,7 @@
                 Mit Leidenschaft und Kompetenz zum perfekten Ergebnis
                 Bei Le-Noir Web-Entwicklung ist es unsere Mission, Ihre Visionen und Ideen in die Realität umzusetzen. Wir nehmen uns Zeit, Ihre Bedürfnisse und Wünsche genau zu verstehen und entwickeln gemeinsam mit Ihnen ein Konzept, das perfekt zu Ihnen passt. 
                 Dabei legen wir großen Wert auf eine enge Zusammenarbeit und offene Kommunikation, so dass Sie während des gesamten Projekts stets involviert sind und Ihre Ideen einbringen können.                </p>    
-              <button type="button" class="btn btn-dark"><a href="./pages/web-dev.html" class="more-link">Mehr erfahren</a></button>
+              <!-- <button type="button" class="btn btn-dark"><a href="./pages/web-dev.html" class="more-link">Mehr erfahren</a></button> -->
             </div>
           </div>
         </div>
@@ -128,7 +131,7 @@
                 Bei Le-Noir Web-Entwicklung wissen wir, dass Ihre Webseite auch nach der Fertigstellung des Projekts gepflegt und aktualisiert 
                 werden muss. Daher bieten wir Ihnen umfassenden Support und Wartung, damit Ihre Webseite immer auf dem neuesten Stand bleibt.
               </p>
-              <button type="button" class="btn btn-dark"><a href="./pages/support.html" class="more-link">Mehr erfahren</a></button>
+              <!-- <button type="button" class="btn btn-dark"><a href="./pages/support.html" class="more-link">Mehr erfahren</a></button> -->
             </div>
           </div>
         </div>
@@ -136,9 +139,9 @@
     </div>
 
     <section class="showcase">
-      <img src="./images/appointment-bg.jpg" alt="Picture">
+      <img src="./images/bg9.jpg" alt="Picture">
       <div class="overlay-appointment">
-          <h2 class="appointment-header">BERATUNGSTERMIN</h2>
+          <h2 class="appointment-header">BERATUNG?</h2>
           <p class="appointment-text">Vereinbaren sie noch Heute Ihren kostenlosen Beratungstermin!</p>
           <button type="button" class="btn btn-light"><a href="mailto:jan.eggenberger@bluewin.ch?subject=Beratungstermin" id="appointment-link">Termin vereinbaren</a></button>
       </div>
@@ -146,14 +149,14 @@
 
     <section class="reference">
       <div class="reference-body">
-        <h4 class="reference-header">
+        <p class="reference-header">
           "In der heutigen digitalen Welt ist eine starke Online-Präsenz für Unternehmen unerlässlich. 
           Bei Le Noir Webentwicklung verstehen wir die Bedeutung eines benutzerfreundlichen und ansprechenden Webdesigns, 
           das Ergebnisse liefert.
           <br><br>
           Unser Team aus erfahrenen Designern und Entwicklern arbeitet eng mit unseren Kunden zusammen, um deren einzigartige Vision zu 
           verwirklichen und eine Website zu erstellen, die ihre Zielgruppe anspricht und ihre Geschäftsziele fördert."
-        </h4>
+        </p>
         <div class="profile-thumb" style="background: url(images/jan.JPG);"></div>
         <h5 class="reference-text">Jan Eggenberger <br> CEO - LE NOIR</h5>
       </div>
