--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           Unser Team aus erfahrenen Designern und Entwicklern arbeitet eng mit unseren Kunden zusammen, um deren einzigartige Vision zu 
           verwirklichen und eine Website zu erstellen, die ihre Zielgruppe anspricht und ihre Geschäftsziele fördert."
         </p>
-        <div class="profile-thumb" style="background: url(images/jan.JPG);"></div>
+        <div class="profile-thumb" style="background: url(./images/jan.jpg);"></div>
         <h5 class="reference-text">Jan Eggenberger <br> CEO - LE NOIR</h5>
       </div>
     </section>
