--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
           Web-Entwicklung nach Mass!
         </p>
         <span>
-          <a href="https://github.com/LE-NOIR-Web-Entwicklung" class="link"><i class="bi bi-github"></i></i></a>
-          <a href="https://www.linkedin.com/company/102561879/admin/feed/posts/" class="link"><i class="bi bi-linkedin"></i></a>
-          <a href="https://www.instagram.com/le_noir.ch/" class="link"><i class="bi bi-instagram"></i></i></a>
+          <a href="https://github.com/LE-NOIR-Web-Entwicklung" target="_blank" class="link"><i class="bi bi-github"></i></i></a>
+          <a href="https://www.linkedin.com/company/102561879/admin/feed/posts/" target="_blank" class="link"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.instagram.com/le_noir.ch/" target="_blank" class="link"><i class="bi bi-instagram"></i></i></a>
         </span>
       </div>
     </section>
