--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </p>
         <span>
           <a href="https://github.com/LE-NOIR-Web-Entwicklung" target="_blank" class="link"><i class="bi bi-github"></i></i></a>
-          <a href="https://www.linkedin.com/company/102561879/admin/feed/posts/" target="_blank" class="link"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.linkedin.com/company/le-noir-web-entwicklung/" target="_blank" class="link"><i class="bi bi-linkedin"></i></a>
           <a href="https://www.instagram.com/le_noir.ch/" target="_blank" class="link"><i class="bi bi-instagram"></i></i></a>
         </span>
       </div>
@@ -60,8 +60,8 @@
       <h3 class="content-header">DIENSTLEISTUNGEN</h3>
       <p class="content-text">
         Sie möchten Ihre bestehende Website überarbeiten oder eine neue Website erstellen?
-        <br>
-        Dann sind Sie bei uns an der richtigen Adresse. Ob Webdesign, Webentwicklung oder Support, wir sind immer für Sie da und geben unser Bestes, um Ihnen ein perfektes Benutzererlebnis zu bieten.
+        <br><br>
+        Dann sind Sie bei Le Noir an der richtigen Adresse. Ob Webdesign, Web-Entwicklung oder Support, wir sind immer für Sie da und geben unser Bestes, um Ihnen ein perfektes Benutzererlebnis zu bieten.
       </p>
 
       <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -77,7 +77,6 @@
                 Ein Screen- und UX-Designer vereint die verschiedenen Anforderungen und Erkenntnisse: Brand Design, Bildwelt, Content und Erfahrung für eine optimale Nutzerführung. 
                 Basierend auf den Nutzerprofilen und dem erwarteten Nutzerverhalten entstehen Seitenelemente, Navigation und Unterseiten. 
                 Ein klickbarer Prototyp ermöglicht erste Tests und eine Beurteilung der Anmutung.                </p>
-              <!-- <button type="button" class="btn btn-dark"><a href="./pages/web-design.html" class="more-link">Mehr erfahren</a></button> -->
             </div>
           </div>
         </div>
@@ -94,7 +93,6 @@
                 Die Qualität und das gelungene Zusammenspiel all dieser Elemente entscheiden maßgeblich über die spätere Sichtbarkeit der 
                 Website - also das Ranking in der Google-Suche.
               </p>
-              <!-- <button type="button" class="btn btn-dark"><a href="./pages/web-content.html" class="more-link">Mehr erfahren</a></button> -->
             </div>
           </div>
         </div>
@@ -111,7 +109,6 @@
                 Mit Leidenschaft und Kompetenz zum perfekten Ergebnis
                 Bei Le-Noir Web-Entwicklung ist es unsere Mission, Ihre Visionen und Ideen in die Realität umzusetzen. Wir nehmen uns Zeit, Ihre Bedürfnisse und Wünsche genau zu verstehen und entwickeln gemeinsam mit Ihnen ein Konzept, das perfekt zu Ihnen passt. 
                 Dabei legen wir großen Wert auf eine enge Zusammenarbeit und offene Kommunikation, so dass Sie während des gesamten Projekts stets involviert sind und Ihre Ideen einbringen können.                </p>    
-              <!-- <button type="button" class="btn btn-dark"><a href="./pages/web-dev.html" class="more-link">Mehr erfahren</a></button> -->
             </div>
           </div>
         </div>
@@ -131,7 +128,6 @@
                 Bei Le-Noir Web-Entwicklung wissen wir, dass Ihre Webseite auch nach der Fertigstellung des Projekts gepflegt und aktualisiert 
                 werden muss. Daher bieten wir Ihnen umfassenden Support und Wartung, damit Ihre Webseite immer auf dem neuesten Stand bleibt.
               </p>
-              <!-- <button type="button" class="btn btn-dark"><a href="./pages/support.html" class="more-link">Mehr erfahren</a></button> -->
             </div>
           </div>
         </div>
@@ -142,7 +138,7 @@
       <img src="./images/bg9.jpg" alt="Picture">
       <div class="overlay-appointment">
           <h2 class="appointment-header">BERATUNG?</h2>
-          <p class="appointment-text">Vereinbaren sie noch Heute Ihren kostenlosen Beratungstermin!</p>
+          <p class="appointment-text">Vereinbaren Sie noch Heute Ihren kostenlosen Beratungstermin!</p>
           <button type="button" class="btn btn-light"><a href="mailto:jan.eggenberger@bluewin.ch?subject=Beratungstermin" id="appointment-link">Termin vereinbaren</a></button>
       </div>
     </section>
@@ -151,14 +147,20 @@
       <div class="reference-body">
         <p class="reference-header">
           "In der heutigen digitalen Welt ist eine starke Online-Präsenz für Unternehmen unerlässlich. 
-          Bei Le Noir Webentwicklung verstehen wir die Bedeutung eines benutzerfreundlichen und ansprechenden Webdesigns, 
+          Bei Le Noir Web-Entwicklung verstehen wir die Bedeutung eines benutzerfreundlichen und ansprechenden Webdesigns, 
           das Ergebnisse liefert.
           <br><br>
-          Unser Team aus erfahrenen Designern und Entwicklern arbeitet eng mit unseren Kunden zusammen, um deren einzigartige Vision zu 
-          verwirklichen und eine Website zu erstellen, die ihre Zielgruppe anspricht und ihre Geschäftsziele fördert."
+          Le Noir arbeitet eng mit Ihnen als Kunden zusammen, um deren einzigartige Vision zu 
+          verwirklichen und eine Website zu erstellen, die Ihre Zielgruppe anspricht und Ihre Geschäftsziele fördert."
         </p>
         <div class="profile-thumb" style="background: url(./images/jan.jpg);"></div>
-        <h5 class="reference-text">Jan Eggenberger <br> CEO - LE NOIR</h5>
+        <h5 class="reference-text">Jan Eggenberger </h5>
+        <p class="info-je">CEO | Founder | Web-Entwickler</p>
+        <p>
+          <a href="https://github.com/FEDIT-JE" target="_blank" class="link-black"><i class="bi bi-github"></i></i></a>
+          <a href="https://www.linkedin.com/in/jan-eggenberger-903517179/" target="_blank" class="link-black"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.instagram.com/jxn.egg/" target="_blank" class="link-black"><i class="bi bi-instagram"></i></i></a>
+        </p>
       </div>
     </section>
 
@@ -176,7 +178,7 @@
         <p><i class="bi bi-c-circle"></i> 2024 - Copyright</p>
         <span class="">
           <a href="https://github.com/LE-NOIR-Web-Entwicklung" class="link"><i class="bi bi-github"></i></i></a>
-          <a href="https://www.linkedin.com/company/102561879/admin/feed/posts/" class="link"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.linkedin.com/company/le-noir-web-entwicklung/" class="link"><i class="bi bi-linkedin"></i></a>
           <a href="https://www.instagram.com/le_noir.ch/" class="link"><i class="bi bi-instagram"></i></i></a>
         </span>
         <div class="contact">
