--- a/pages/about.html
+++ b/pages/about.html
@@ -52,26 +52,23 @@
         <h3 class="content-header">ÜBER UNS</h3>
         <p class="content-text"> 
           Eine perfekte Website für jeden.
-          <br>
+          <br><br>
           Wir bei LE NOIR glauben, dass jeder eine Online-Präsenz verdient, die professionell, ansprechend und effektiv ist.
-          <br>
-          Unsere Mission ist es, Menschen mit den Werkzeugen und dem Know-how auszustatten, die sie benötigen, um die perfekte Website für ihre Bedürfnisse zu erstellen, unabhängig von ihren technischen Fähigkeiten oder ihrem Budget.
+          <br><br>
+          Unsere Mission ist es, Menschen mit den Werkzeugen und dem Know-how auszustatten, die Sie  benötigen, um die perfekte Website für Ihre Bedürfnisse zu erstellen, unabhängig von Ihren technischen Fähigkeiten oder Ihrem Budget.
         </p>
         <div class="row about-section">
           <div class="col-md-12">
-            <img src="./../images/jan.jpg" class="about-img"/> 
-          </div>
-          <div class="col-md-12 about-text">
-            <h4>JAN EGGENBERGER</h4>
-            <h6>CEO | Founder | Web-Entwickler</h6>
-            <br>
-            <p class="about-quote">
-              Wenn du etwas so machst, wie du es seit zehn Jahren gemacht hast, 
-              <br>
-              dann sind die Chancen groß, dass du es falsch machst.
-              <br>
-              – Charles Kettering
-            </p>
+            <span>
+                <div class="profile-thumb" style="background: url(./../images/jan.jpg);"></div>
+                <h5 class="reference-text">Jan Eggenberger </h5>
+                <p class="info-je">CEO | Founder | Web-Entwickler</p>
+                <p>
+                  <a href="https://github.com/FEDIT-JE" target="_blank" class="link-black"><i class="bi bi-github"></i></i></a>
+                  <a href="https://www.linkedin.com/in/jan-eggenberger-903517179/" target="_blank" class="link-black"><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.instagram.com/jxn.egg/" target="_blank" class="link-black"><i class="bi bi-instagram"></i></i></a>
+                </p>
+            </span> 
           </div>
         </div>
     </div>
@@ -90,7 +87,7 @@
         <p><i class="bi bi-c-circle"></i> 2024 - Copyright</p>
         <span class="footer-icons">
           <a href="https://github.com/LE-NOIR-Web-Entwicklung" class="link"><i class="bi bi-github"></i></i></a>
-          <a href="https://www.linkedin.com/company/102561879/admin/feed/posts/" class="link"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.linkedin.com/company/le-noir-web-entwicklung/" class="link"><i class="bi bi-linkedin"></i></a>
           <a href="https://www.instagram.com/le_noir.ch/" class="link"><i class="bi bi-instagram"></i></i></a>
         </span>
         <div class="contact">
