--- a/pages/contact.html
+++ b/pages/contact.html
@@ -51,7 +51,7 @@
     <div class="content">
         <h3 class="content-header">INTERESSIERT?</h3>
         <p class="content-text"> 
-          Nehmen sie noch heute Kontakt auf.
+          Nehmen Sie noch heute Kontakt auf.
         </p>
         <script>
           function sendEmail(event) {
@@ -107,7 +107,7 @@
         <p><i class="bi bi-c-circle"></i> 2024 - Copyright</p>
         <span class="footer-icons">
           <a href="https://github.com/LE-NOIR-Web-Entwicklung" class="link"><i class="bi bi-github"></i></i></a>
-          <a href="https://www.linkedin.com/company/102561879/admin/feed/posts/" class="link"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.linkedin.com/company/le-noir-web-entwicklung/" class="link"><i class="bi bi-linkedin"></i></a>
           <a href="https://www.instagram.com/le_noir.ch/" class="link"><i class="bi bi-instagram"></i></i></a>
         </span>
         <div class="contact">
