--- a/pages/web-content.html
+++ b/pages/web-content.html
@@ -118,7 +118,7 @@
         <img src="./../images/bg9.jpg" alt="Picture">
         <div class="overlay-appointment">
             <h2 class="appointment-header">BERATUNGSTERMIN</h2>
-            <p class="appointment-text">Vereinbaren sie noch Heute Ihren kostenlosen Beratungstermin!</p>
+            <p class="appointment-text">Vereinbaren Sie  noch Heute Ihren kostenlosen Beratungstermin!</p>
             <button type="button" class="btn btn-light"><a href="mailto:jan.eggenberger@bluewin.ch?subject=Beratungstermin" id="appointment-link">Termin vereinbaren</a></button>
         </div>
     </section>
@@ -137,7 +137,7 @@
         <p><i class="bi bi-c-circle"></i> 2024 - Copyright</p>
         <span class="footer-icons">
           <a href="https://github.com/LE-NOIR-Web-Entwicklung" class="link"><i class="bi bi-github"></i></i></a>
-          <a href="https://www.linkedin.com/company/102561879/admin/feed/posts/" class="link"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.linkedin.com/company/le-noir-web-entwicklung/" class="link"><i class="bi bi-linkedin"></i></a>
           <a href="https://www.instagram.com/le_noir.ch/" class="link"><i class="bi bi-instagram"></i></i></a>
         </span>
         <div class="contact">
