--- a/pages/web-design.html
+++ b/pages/web-design.html
@@ -62,7 +62,7 @@
           <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
               <p>
-                <span style="font-weight: bold;">Ihr Erfolg im Fokus:</span> Mit einem tiefen Verständnis Ihrer Zielgruppe entwickeln wir ein Design, das sie begeistert und Ihre Erwartungen erfüllt. Intuitive Benutzerführung und klare Informationsarchitektur sorgen für eine positive User Experience, die Besucher zu loyalen Kunden macht. Die optimale Abstimmung aller Elemente garantiert eine Website, die Ihre Ziele effektiv erreicht.
+                <span style="font-weight: bold;">Ihr Erfolg im Fokus:</span> Mit einem tiefen Verständnis Ihrer Zielgruppe entwickeln wir ein Design, das Sie  begeistert und Ihre Erwartungen erfüllt. Intuitive Benutzerführung und klare Informationsarchitektur sorgen für eine positive User Experience, die Besucher zu loyalen Kunden macht. Die optimale Abstimmung aller Elemente garantiert eine Website, die Ihre Ziele effektiv erreicht.
               </p>
             </div>
           </div>
@@ -150,7 +150,7 @@
         <p><i class="bi bi-c-circle"></i> 2024 - Copyright</p>
         <span class="footer-icons">
           <a href="https://github.com/LE-NOIR-Web-Entwicklung" class="link"><i class="bi bi-github"></i></i></a>
-          <a href="https://www.linkedin.com/company/102561879/admin/feed/posts/" class="link"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.linkedin.com/company/le-noir-web-entwicklung/" class="link"><i class="bi bi-linkedin"></i></a>
           <a href="https://www.instagram.com/le_noir.ch/" class="link"><i class="bi bi-instagram"></i></i></a>
         </span>
         <div class="contact">
