--- a/pages/web-dev.html
+++ b/pages/web-dev.html
@@ -62,7 +62,7 @@
             <div class="carousel-item w-80">
               <div class="carousel-row">
                 <h4 style="font-weight: bold;">SCHNELL &amp; QUALITATIV</h4>
-                <p>In der heutigen Online-Welt ist eine qualitative Webseite mehr als nur eine Visitenkarte – sie ist Ihr Fundament im digitalen Zeitalter.</p>
+                <p>In der heutigen Online-Welt ist eine qualitative Webseite mehr als nur eine Visitenkarte – Sie  ist Ihr Fundament im digitalen Zeitalter.</p>
               </div>
             </div>
             <div class="carousel-item w-80">
@@ -106,7 +106,7 @@
         <p><i class="bi bi-c-circle"></i> 2024 - Copyright</p>
         <span class="footer-icons">
           <a href="https://github.com/LE-NOIR-Web-Entwicklung" class="link"><i class="bi bi-github"></i></i></a>
-          <a href="https://www.linkedin.com/company/102561879/admin/feed/posts/" class="link"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.linkedin.com/company/le-noir-web-entwicklung/" class="link"><i class="bi bi-linkedin"></i></a>
           <a href="https://www.instagram.com/le_noir.ch/" class="link"><i class="bi bi-instagram"></i></i></a>
         </span>
         <div class="contact">
