--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
     <section class="reference">
       <div class="reference-body">
         <p class="reference-header">
-          "In der heutigen digitalen Welt ist eine starke Online-Präsenz für Unternehmen unerlässlich. 
+          In der heutigen digitalen Welt ist eine starke Online-Präsenz für Unternehmen unerlässlich. 
           Bei Le Noir Web-Entwicklung verstehen wir die Bedeutung eines benutzerfreundlichen und ansprechenden Webdesigns, 
           das Ergebnisse liefert.
           <br><br>
           Le Noir arbeitet eng mit Ihnen als Kunden zusammen, um deren einzigartige Vision zu 
-          verwirklichen und eine Website zu erstellen, die Ihre Zielgruppe anspricht und Ihre Geschäftsziele fördert."
+          verwirklichen und eine Website zu erstellen, die Ihre Zielgruppe anspricht und Ihre Geschäftsziele fördert.
         </p>
         <div class="profile-thumb" style="background: url(./images/jan.jpg);"></div>
         <h5 class="reference-text">Jan Eggenberger </h5>
