--- a/pages/web-content.html
+++ b/pages/web-content.html
@@ -136,9 +136,9 @@
         <h5 class="logo-text">LE-NOIR</h5>
         <p><i class="bi bi-c-circle"></i> 2024 - Copyright</p>
         <span class="footer-icons">
-          <a href="https://github.com/LE-NOIR-Web-Entwicklung" class="link"><i class="bi bi-github"></i></i></a>
-          <a href="https://www.linkedin.com/company/le-noir-web-entwicklung/" class="link"><i class="bi bi-linkedin"></i></a>
-          <a href="https://www.instagram.com/le_noir.ch/" class="link"><i class="bi bi-instagram"></i></i></a>
+          <a href="https://github.com/LE-NOIR-Web-Entwicklung" class="link" target="_blank"><i class="bi bi-github"></i></i></a>
+          <a href="https://github.com/LE-NOIR-Web-Entwicklung" class="link" target="_blank"><i class="bi bi-github"></i></i></a>
+          <a href="https://www.instagram.com/le_noir.ch/" class="link" target="_blank"><i class="bi bi-instagram"></i></i></a>
         </span>
         <div class="contact">
           <span><i class="bi bi-geo-alt-fill"></i> Oberentfelden, Schweiz</span>
