--- a/pages/about.html
+++ b/pages/about.html
@@ -87,7 +87,7 @@
         <p><i class="bi bi-c-circle"></i> 2024 - Copyright</p>
         <span class="footer-icons">
           <a href="https://github.com/LE-NOIR-Web-Entwicklung" class="link" target="_blank"><i class="bi bi-github"></i></i></a>
-          <a href="https://github.com/LE-NOIR-Web-Entwicklung" class="link" target="_blank"><i class="bi bi-github"></i></i></a>
+          <a href="https://www.linkedin.com/company/le-noir-web-entwicklung/" target="_blank" class="link"><i class="bi bi-linkedin"></i></a>
           <a href="https://www.instagram.com/le_noir.ch/" class="link" target="_blank"><i class="bi bi-instagram"></i></i></a>
         </span>
         <div class="contact">
